theme of the month alignment and ui fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,4 @@
-.centered {
 
-  /* transform: translate(-50%, -50%); */
-}
-/* body {  min-width: 800px;
- } */
-/* .text {
-  font-size: 1.5vw;
-  padding-left: 1.5vw;
-  width: 100%;
-} */
 .centeredPlayBtn {
   position: absolute;
   top: 50%;
@@ -26,21 +16,6 @@
   /* flex-direction: column; */
 }
 
-
- 
-/* .leftDown{
-  position: absolute;
-  bottom: 1px;
-  left: 1px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-} */
-/* .bottom-left {
-  position: absolute;
-  bottom: 8px;
-  left: 16px;
-} */
 #thisDiv{
   position:absolute;
   left:50%;
